2007-11-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/db_adddel.h:
	construct_specified_columns(): Use the font, foreground-color, 
	and background-color settings for the list view too.

2007-11-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/layoutwidgetbase.cc:
	apply_formatting(): Use the correct widget color 
	properties to really set the foreground text color and 
	background color.

2007-11-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/Makefile.am: Add an extra repeated link line.
	* glom/frame_glom.h: Remove the horrible extra member 
	variable hack around that linker strangeness.

	* glom/utility_widgets/canvas/Makefile.am: Correct some filenames to 
	fix the distcheck.

2007-11-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	Handle the drag-motion signal to show a temporary canvas item while dragging. 
	But this does not work - the cursor is grabbed and no further motion events 
	occur, so this is partly commented out.

2007-11-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/frame_glom.cc:
	* glom/frame_glom.h: Move dialog creation from the constructor to 
	where they are first used. This reduces start-up time slightly, and stops 
	wasting memory, at the cost of slightly (impercetible, hopefully) longer 
	time to open menus. 

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_developer.glade: Make the toolbar pack_end and non-expand 
	so that it acts as expected.
	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	Call set_default_position() with the drop coordinates, so that all items 
	are dropped at the correct place.

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	on_canvas_drag_drop(): Do not call drag_get_data(). It does not seem 